@@ -1,6 +1,6 @@
 Package: DiffBind
 Type: Package
-Version: 2.3.12
+Version: 2.3.13
 Title: Differential Binding Analysis of ChIP-Seq Peak Data
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gord Brown
         <gdbzork@gmail.com>
@@ -14,7 +14,7 @@ Depends: R (>= 3.3.0), GenomicRanges, SummarizedExperiment
 Imports: RColorBrewer, amap, edgeR, gplots, grDevices, limma, GenomicAlignments, 
         locfit, stats, utils, IRanges, zlibbioc, lattice, systemPipeR, tools, Rcpp,
         dplyr, ggplot2, BiocParallel, parallel, S4Vectors, Rsamtools, DESeq2, methods,
-        graphics
+        graphics, ggrepel
 Suggests: DESeq, BiocStyle, testthat
 Enhances: rgl, XLConnect
 LinkingTo: Rsamtools (>= 1.19.38), Rcpp
