@@ -127,7 +127,7 @@ importFrom(tools,file_ext)
 
 importFrom(Rcpp, evalCpp)
 
-importFrom(dplyr,bind_rows, mutate)
+importFrom(dplyr,bind_rows, mutate, filter)
 
 importFrom(BiocParallel, bplapply)
 
@@ -142,4 +142,6 @@ importFrom(Rsamtools, BamFileList, ScanBamParam, scanBamFlag, countBam)
 
 importFrom(methods,as)
 
-importFrom(ggplot2, ggplot, aes, geom_point, scale_color_manual, labs)
+importFrom(ggplot2, ggplot, aes, geom_point, scale_color_manual, 
+           labs, geom_text)
+importFrom(ggrepel,geom_text_repel)
